--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,5 @@
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.so
-*.egg-info/
-
-# Virtual environments
-venv/
-.env/
-
-# IDEs
-.vscode/
-.idea/
-
-# Logs and data
-*.log
-data/
-logs/
-
-# Models and results
-models/
-*.h5
-*.pkl
-
-# OS files
-.DS_Store
-Thumbs.db
-desktop.ini
+venv/ 
+__pycache__/ 
+*.pyc 
+logs/ 
+.env 
